k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: ghcr.io/danielemenchetti/todo-app-docker-k8s/backend:IMAGE_TAG
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
